--- a/cycloid.csproj
+++ b/cycloid.csproj
@@ -45,7 +45,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Compass.xaml.cs">
-      <DependentUpon>Controls\Compass.xaml</DependentUpon>
+      <DependentUpon>Compass.xaml</DependentUpon>
     </Compile>
     <Compile Include="GeoCalculation.cs" />
     <Compile Include="MapPoint.cs" />
@@ -55,7 +55,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Map.xaml.cs">
-      <DependentUpon>Controls\Map.xaml</DependentUpon>
+      <DependentUpon>Map.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\PopupBrowser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -101,8 +101,8 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Themes\Generic.xaml">
-      <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
@@ -148,6 +148,7 @@
       <Version>8.0.0</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
