--- a/cycloid.csproj
+++ b/cycloid.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Routing\RouteResult.cs" />
     <Compile Include="Routing\RouteSection.cs" />
     <Compile Include="Strava.cs" />
+    <Compile Include="Extensions\TaskExtensions.cs" />
     <Compile Include="Track.cs" />
     <Compile Include="ViewModel.cs" />
   </ItemGroup>
