Map style and color

--- a/cycloid.csproj
+++ b/cycloid.csproj
@@ -67,8 +67,11 @@
     <Compile Include="Extensions\TaskExtensions.cs" />
     <Compile Include="Track.cs" />
     <Compile Include="Convert.cs" />
+    <Compile Include="TrackPoint.cs" />
     <Compile Include="ViewModel.cs" />
     <Compile Include="Format.cs" />
+    <Compile Include="ViewModel.Heatmap.cs" />
+    <Compile Include="ViewModel.MapStyleAndColor.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
