--- a/cycloid.csproj
+++ b/cycloid.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Track.cs" />
     <Compile Include="Convert.cs" />
     <Compile Include="TrackPoint.cs" />
+    <Compile Include="CommonValues.cs" />
     <Compile Include="ViewModel.cs" />
     <Compile Include="Format.cs" />
     <Compile Include="ViewModel.Heatmap.cs" />
@@ -157,7 +158,9 @@
       <Version>8.0.0</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include=".editorconfig" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
