--- a/cycloid.csproj
+++ b/cycloid.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Format.cs" />
     <Compile Include="ViewModel.Heatmap.cs" />
     <Compile Include="ViewModel.IO.cs" />
+    <Compile Include="ViewModel.Map.cs" />
     <Compile Include="ViewModel.MapStyleAndColor.cs" />
     <Compile Include="ViewModel.StyleSheet.cs" />
     <Compile Include="WayPoint.cs" />
