--- a/.editorconfig
+++ b/.editorconfig
@@ -20,6 +20,9 @@ csharp_style_expression_bodied_local_functions = false:silent
 # VSTHRD103: Call async methods when in an async method
 dotnet_diagnostic.VSTHRD103.severity = silent
 
+# VSTHRD003: Avoid awaiting foreign Tasks
+dotnet_diagnostic.VSTHRD003.severity = none
+
 [*.{cs,vb}]
 #### Naming styles ####
 
