--- a/.editorconfig
+++ b/.editorconfig
@@ -23,6 +23,9 @@ dotnet_diagnostic.VSTHRD103.severity = silent
 # VSTHRD003: Avoid awaiting foreign Tasks
 dotnet_diagnostic.VSTHRD003.severity = none
 
+# IDE0220: Add explicit cast
+dotnet_diagnostic.IDE0220.severity = silent
+
 [*.{cs,vb}]
 #### Naming styles ####
 
