--- a/cycloid.csproj
+++ b/cycloid.csproj
@@ -69,12 +69,14 @@
     <Compile Include="Controls\Map.Routing.cs" />
     <Compile Include="Controls\ViewModelControl.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
+    <Compile Include="ICanBeInvalid.cs" />
     <Compile Include="Info\AmenitiesConverter.cs" />
     <Compile Include="Info\InfoCache.cs" />
     <Compile Include="Info\InfoPoint.cs" />
     <Compile Include="OnTrack.cs" />
     <Compile Include="PointOfInterest.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Selection.cs" />
     <Compile Include="Track.Index.cs" />
     <Compile Include="Track.CompareSession.cs" />
     <Compile Include="Controls\Bing.xaml.cs">
