--- a/cycloid.csproj
+++ b/cycloid.csproj
@@ -152,6 +152,7 @@
     <Compile Include="ViewModel.Map.cs" />
     <Compile Include="ViewModel.Pois.cs" />
     <Compile Include="ViewModel.Routing.cs" />
+    <Compile Include="ViewModel.Selection.cs" />
     <Compile Include="ViewModel.StyleSheet.cs" />
     <Compile Include="WayPoint.cs" />
   </ItemGroup>
