--- a/cycloid.csproj
+++ b/cycloid.csproj
@@ -61,6 +61,9 @@
     </Compile>
     <Compile Include="Behaviors\DragableBehavior.cs" />
     <Compile Include="Behaviors\PropertyChangedTrigger.cs" />
+    <Compile Include="Controls\DeleteSelectionDialog.xaml.cs">
+      <DependentUpon>DeleteSelectionDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\InfoToggleButton.xaml.cs">
       <DependentUpon>InfoToggleButton.xaml</DependentUpon>
     </Compile>
@@ -193,6 +196,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\Compass.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\DeleteSelectionDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
