--- a/cycloid.Wahoo/Properties/launchSettings.json
+++ b/cycloid.Wahoo/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "cycloid.Wahoo": {
       "commandName": "Project",
-      "commandLineArgs": "\"C:\\Users\\stefa\\OneDrive\\Dokumente\\TPBR24\\Route\\TPBR24.track\""
+      "commandLineArgs": "\"C:\\Users\\stefa\\OneDrive\\Dokumente\\Tracks\\BarceloRunde24.track\""
     }
   }
 }
