--- a/cycloid.UWP/cycloid.UWP.csproj
+++ b/cycloid.UWP/cycloid.UWP.csproj
@@ -245,6 +245,9 @@
     <PackageReference Include="CommunityToolkit.Uwp.Media">
       <Version>8.1.240916</Version>
     </PackageReference>
+    <PackageReference Include="FluentIcons.Uwp">
+      <Version>1.1.259</Version>
+    </PackageReference>
     <PackageReference Include="GeoJSON.Text">
       <Version>1.0.2</Version>
     </PackageReference>
