--- a/cycloid.UWP/cycloid.UWP.csproj
+++ b/cycloid.UWP/cycloid.UWP.csproj
@@ -1,311 +1,43 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{684352C4-FF3E-4727-892E-EE2A36665370}</ProjectGuid>
-    <OutputType>AppContainerExe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>cycloid</RootNamespace>
-    <AssemblyName>cycloid</AssemblyName>
+    <OutputType>WinExe</OutputType>
+    <TargetFramework>net9.0-windows10.0.26100.0</TargetFramework>
+    <TargetPlatformMinVersion>10.0.18362.0</TargetPlatformMinVersion>
+    <WindowsSdkPackageVersion>10.0.26100.54</WindowsSdkPackageVersion>
+    <Platforms>x64</Platforms>
+    <UseUwp>true</UseUwp>
     <DefaultLanguage>en-US</DefaultLanguage>
-    <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.22621.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
-    <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
-    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
-    <NoWarn>;2008;MSB3277</NoWarn>
-    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-    <ErrorReport>prompt</ErrorReport>
-    <Prefer32Bit>true</Prefer32Bit>
-    <LangVersion>latest</LangVersion>
-    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
-    <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
-    <PackageCertificateKeyFile>cycloid_TemporaryKey.pfx</PackageCertificateKeyFile>
-    <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
-    <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
-    <GenerateTestArtifacts>True</GenerateTestArtifacts>
-    <AppxBundle>Always</AppxBundle>
-    <AppxBundlePlatforms>x64</AppxBundlePlatforms>
-    <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
+    <PublishAot>true</PublishAot>
+    <PublishProfile>win-$(Platform).pubxml</PublishProfile>
+    <DisableRuntimeMarshalling>true</DisableRuntimeMarshalling>
+    <EnableMsixTooling>true</EnableMsixTooling>
+    <LangVersion>preview</LangVersion>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DefineConstants>$(DefineConstants);DISABLE_XAML_GENERATED_BREAK_ON_UNHANDLED_EXCEPTION;DISABLE_XAML_GENERATED_MAIN</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP;DISABLE_XAML_GENERATED_BREAK_ON_UNHANDLED_EXCEPTION;DISABLE_XAML_GENERATED_MAIN</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Optimized|x64'">
-    <OutputPath>bin\x64\Optimized\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP;DISABLE_XAML_GENERATED_BREAK_ON_UNHANDLED_EXCEPTION;DISABLE_XAML_GENERATED_MAIN</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>bin\x64\Release\</OutputPath>
-    <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP;DISABLE_XAML_GENERATED_BREAK_ON_UNHANDLED_EXCEPTION;DISABLE_XAML_GENERATED_MAIN</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <UseDotNetNativeToolchain>true</UseDotNetNativeToolchain>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Behaviors\DragableBehavior.cs" />
-    <Compile Include="Behaviors\PropertyChangedTrigger.cs" />
-    <Compile Include="Controls\DeleteSelectionDialog.xaml.cs">
-      <DependentUpon>DeleteSelectionDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\ExportDialog.xaml.cs">
-      <DependentUpon>ExportDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\InfoToggleButton.xaml.cs">
-      <DependentUpon>InfoToggleButton.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\Map.CompareSession.cs" />
-    <Compile Include="Controls\Map.Playing.cs" />
-    <Compile Include="Controls\Map.Pois.cs" />
-    <Compile Include="Controls\Map.Routing.cs" />
-    <Compile Include="Controls\PasteSelectionDialog.xaml.cs">
-      <DependentUpon>PasteSelectionDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\ProfileSelectionValues.xaml.cs">
-      <DependentUpon>ProfileSelectionValues.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\ViewModelControl.cs" />
-    <Compile Include="Extensions\PointExtensions.cs" />
-    <Compile Include="PeriodicAction.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Controls\Bing.xaml.cs">
-      <DependentUpon>Bing.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\Compass.xaml.cs">
-      <DependentUpon>Compass.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\MapMenuFlyout.cs" />
-    <Compile Include="Controls\MapCurrentPointValues.xaml.cs">
-      <DependentUpon>MapCurrentPointValues.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\PointControl.cs" />
-    <Compile Include="Controls\PointerPanel.cs" />
-    <Compile Include="Controls\PointValuesControl.cs" />
-    <Compile Include="Controls\MapControlBorder.cs" />
-    <Compile Include="Controls\MapHoverPointValues.xaml.cs">
-      <DependentUpon>MapHoverPointValues.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\ProfileHoverPointValues.xaml.cs">
-      <DependentUpon>ProfileHoverPointValues.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\StreetView.xaml.cs">
-      <DependentUpon>StreetView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\Profile.Graph.cs" />
-    <Compile Include="Controls\Profile.Ruler.cs" />
-    <Compile Include="Controls\Profile.xaml.cs">
-      <DependentUpon>Profile.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Extensions\ConfigurationValue.cs" />
-    <Compile Include="External\Osm.cs" />
-    <Compile Include="MainPage.xaml.cs">
-      <DependentUpon>MainPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\Map.xaml.cs">
-      <DependentUpon>Map.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\PopupBrowser.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="External\Strava.cs" />
-    <Compile Include="Extensions\TaskExtensions.cs" />
-    <Compile Include="Throttle.cs" />
-    <Compile Include="Convert.cs" />
-    <Compile Include="ViewModel.Bing.cs" />
-    <Compile Include="ViewModel.CompareSession.cs" />
-    <Compile Include="ViewModel.cs" />
-    <Compile Include="Format.cs" />
-    <Compile Include="ViewModel.Export.cs" />
-    <Compile Include="ViewModel.IO.cs" />
-    <Compile Include="ViewModel.Map.cs" />
-    <Compile Include="ViewModel.Player.cs" />
-    <Compile Include="ViewModel.Pois.cs" />
-    <Compile Include="ViewModel.Routing.cs" />
-    <Compile Include="ViewModel.Selection.cs" />
-    <Compile Include="ViewModel.StyleSheet.cs" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+    <PackageReference Include="CommunityToolkit.Labs.Uwp.TransitionHelper" Version="0.1.241018-local" />
+    <PackageReference Include="CommunityToolkit.Uwp.Animations" Version="8.2.241018-local" />
+    <PackageReference Include="CommunityToolkit.Uwp.Extensions" Version="8.2.241018-local" />
+    <PackageReference Include="CommunityToolkit.Uwp.Media" Version="8.2.241018-local" />
+    <PackageReference Include="FluentIcons.Uwp" Version="1.1.261-local" />
+    <PackageReference Include="GeoJSON.Text" Version="1.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed" Version="3.0.241018-local" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0-rtm.24516.5" />
+    
+    <ProjectReference Include="..\cycloid.Core\cycloid.Core.csproj" />
+
+    <ProjectReference Name="Microsoft.UI.Xaml.Projection" Include="..\Microsoft.UI.Xaml.Projection\Microsoft.UI.Xaml.Projection.csproj" />
+    <ProjectReference Name="Microsoft.VisualStudio.Threading" Include="..\Microsoft.VisualStudio.Threading\Microsoft.VisualStudio.Threading.csproj" />
   </ItemGroup>
+
   <ItemGroup>
-    <AppxManifest Include="Package.appxmanifest">
-      <SubType>Designer</SubType>
-    </AppxManifest>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Assets\Bakery.png" />
-    <Content Include="Assets\Bar.png" />
-    <Content Include="Assets\FastFood.png" />
-    <Content Include="Assets\FuelStation.png" />
-    <Content Include="Assets\Restaurant.png" />
-    <Content Include="Controls\StreetView.html" />
-    <Content Include="Assets\Supermarket.png" />
-    <Content Include="Assets\Toilet.png" />
-    <Content Include="Assets\Water.png" />
-    <Content Include="Properties\Default.rd.xml" />
-    <Content Include="Assets\LockScreenLogo.scale-200.png" />
-    <Content Include="Assets\SplashScreen.scale-200.png" />
-    <Content Include="Assets\Square150x150Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-    <Content Include="Assets\StoreLogo.png" />
-    <Content Include="Assets\Wide310x150Logo.scale-200.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
-    <Page Include="Controls\Bing.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Controls\Compass.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Controls\DeleteSelectionDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Controls\ExportDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Controls\InfoToggleButton.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Controls\MapCurrentPointValues.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Controls\MapHoverPointValues.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Controls\PasteSelectionDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Controls\ProfileHoverPointValues.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Controls\ProfileSelectionValues.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Controls\StreetView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Controls\Profile.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="MainPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Controls\Map.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Themes\Generic.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="$(PkgFluentIcons_Uwp)\contentFiles\any\**\*.*">
-      <Link>%(RecursiveDir)%(Filename)%(Extension)</Link>
-      <Visible>false</Visible>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Labs.Uwp.TransitionHelper">
-      <Version>0.1.240917-build.1755</Version>
-    </PackageReference>
-    <PackageReference Include="CommunityToolkit.Mvvm">
-      <Version>8.3.2</Version>
-    </PackageReference>
-    <PackageReference Include="CommunityToolkit.Uwp.Animations">
-      <Version>8.1.240916</Version>
-    </PackageReference>
-    <PackageReference Include="CommunityToolkit.Uwp.Extensions">
-      <Version>8.1.240916</Version>
-    </PackageReference>
-    <PackageReference Include="CommunityToolkit.Uwp.Media">
-      <Version>8.1.240916</Version>
-    </PackageReference>
-    <PackageReference Include="FluentIcons.Uwp">
-      <Version>1.1.259</Version>
-      <GeneratePathProperty>True</GeneratePathProperty>
-    </PackageReference>
-    <PackageReference Include="GeoJSON.Text">
-      <Version>1.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets">
-      <Version>8.0.1</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.14</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.UI.Xaml">
-      <Version>2.8.6</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Threading">
-      <Version>17.11.20</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Web.WebView2">
-      <Version>1.0.2839-prerelease</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed">
-      <Version>2.0.1</Version>
-    </PackageReference>
-    <PackageReference Include="PolySharp">
-      <Version>1.14.1</Version>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="System.Text.Json">
-      <Version>8.0.5</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Assets\cycle.3mf" />
-    <None Include="cycloid_TemporaryKey.pfx" />
-    <None Include="secrets.json">
+    <None Update="secrets.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <SDKReference Include="WindowsDesktop, Version=10.0.22621.0">
-      <Name>Windows Desktop Extensions for the UWP</Name>
-    </SDKReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\cycloid.Core\cycloid.Core.csproj">
-      <Project>{dcdb4eb9-ad80-495c-856c-ad1ba7335b9e}</Project>
-      <Name>cycloid.Core</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
-    <VisualStudioVersion>14.0</VisualStudioVersion>
-  </PropertyGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
+
 </Project>
